src/ducks/filters/SelectDates.styl
@require 'settings/breakpoints'
@require 'settings/palette'
@require '~styles/variables.styl'

// Due to discrepancies between Chrome and Firefox in
// how select height is computed, we set it directly
select-date-height=3rem
select-date-width=20rem
select-date-height-small = 2.75rem

.SelectDates
    display flex
    white-space nowrap
    width select-date-width
    height select-date-height

    .prev-button, .next-button, .SelectDates-select
        height 100%
        margin 0

    .prev-button, .next-button
        width select-date-height
        margin 0
        padding 0

        svg
            margin-top 5px

    .SelectDates-select
        display inline
        flex 1

        select
            padding 0 1rem
            width 100%
            border-radius 0
            height 100%
            vertical-align top // corrects a 1px bug on Windows' Chrome

.SelectDates__month
    width 9rem

+small-screen()
    .SelectDates
        m = 0.75rem // size of the margin-top/bottom
        topbar-height = 3rem
        top topbar-height
        left 0
        right 0
        width auto
        height select-date-height-small
        padding-left 1rem
        padding-right 0.875rem
        position fixed
        background white
        z-index 2
        display flex
        justify-content center
        align-content center
        border-bottom: 1px solid silver
        color slateGrey

    .SelectDates__DateYearSelector
        flex-grow 1

    .SelectDates__chip
        background-color transparent
        margin-bottom 0
        margin-right 0
        padding 0
        height 100%
        width 100%

        > span:not([class])
            flex-grow 1

        select
            width 100%
            margin-right -1.3rem

        svg
            color coolGrey

    .SelectDates__separator
        height 1.5rem
        margin-left 0.875rem
        margin-right 0.875rem

    .SelectDates__buttons
        display flex
        align-items center

    .SelectDates__Button
        width auto
        background-color transparent
        color coolGrey

    .SelectDates__Button--prev
        padding-right 0.875rem

    .SelectDates__Button--next
        padding-left 0.875rem

    .SelectDates__Select
        color inherit

.SelectDates__Button
    cursor pointer
    color slateGrey

.SelectDates__Button--disabled
    color coolGrey
    cursor not-allowed

